[tool.poetry]
name = "pygmssl"
version = "0.1.2"
description = "A Python ctypes implementation of GmSSLv3.1.1"
license = "MIT"
authors = ["Zhang Jie <zhangj_10ujs@foxmail.com>"]
maintainers = ["Zhang Jie <zhangj_10ujs@foxmail.com>"]
readme = "README.md"
homepage = "https://github.com/j-z10/pygmssl"
keywords=["国密", "GmSSL", "gmssl", "sm2", "sm3", "sm4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "pygmssl", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pycryptodomex = "^3.20.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.0"
isort = "^5.13.2"
flake8 = "^7.1.0"
ipython = "^8.22.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
indent_size = 4
max_line_length = 120
ignore = ["E121", "W6"]
aggressive = 3
# in-place = true
# recursive = true

[tool.isort]
max_line_length = 120